--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "http-server": "^14.1.1"
+    "connect": "^3.7.0",
+    "http-server": "^14.1.1",
+    "serve-static": "^1.15.0"
   }
 }
